--- a/tomcat-main/src/main/resources/log4j.properties
+++ b/tomcat-main/src/main/resources/log4j.properties
@@ -11,7 +11,7 @@ log4j.appender.commandline.layout=org.apache.log4j.PatternLayout
 log4j.appender.commandline.layout.ConversionPattern=%d %p: %m%n
 
 log4j.appender.R=org.apache.log4j.RollingFileAppender
-log4j.appender.R.File=${catalina.home}/logs/cspace-app.log
+log4j.appender.R.File=${catalina.base}/logs/cspace-app.log
 log4j.appender.R.MaxFileSize=5000KB
 # Keep ten backup files
 log4j.appender.R.MaxBackupIndex=10
