CSPACE-6630: Changes for putting service-artifact-generation log files in their own folder inside the system's temp dir.

--- a/csp-impl/pom.xml
+++ b/csp-impl/pom.xml
@@ -43,6 +43,11 @@
 			<type>jar</type>
 		</dependency>
 		<dependency>
+			<groupId>org.collectionspace.services</groupId>
+			<artifactId>org.collectionspace.services.common-api</artifactId>
+			<version>${project.version}</version>
+		</dependency>		
+		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
 			<type>jar</type>
