--- a/tenant.properties
+++ b/tenant.properties
@@ -11,15 +11,20 @@
 # are used in preference to those provided in this properties file.
 
 # The short name for the existing tenant that will be copied,
-# or "cloned" to create a new tenant
+# or use "cloned" to create a new tenant
+# ex.  template.tenant.shortname=fcart
 template.tenant.shortname=
 
 # The short name for the new tenant to be created
+# ex. tenant.shortname=mymuseum
 tenant.shortname=
 
 # The ID for the new tenant to be created
-# (currently an integer; e.g. '5', '23')
+# (currently an integer; e.g. 5, 23)
+# ex. tenant.id=5
 tenant.id=
 
 # The internet domain for the new tenant to be created
+# ex. tenant.internet.domain=fcart.collectionspace.org
 tenant.internet.domain=
+
