--- a/war-entry/pom.xml
+++ b/war-entry/pom.xml
@@ -13,15 +13,6 @@
 
 	<profiles>
 		<profile>
-			<id>jboss</id>
-			<properties>
-				<!-- using the jboss 4.2.x container -->
-				<cargo.container>jboss42x</cargo.container>
-				<cspace.server.home>${env.JBOSS_HOME}/server/cspace</cspace.server.home>
-				<config.destination>${cspace.server.home}/conf</config.destination>
-			</properties>
-		</profile>
-		<profile>
 			<id>tomcat</id>
 			<activation>
 				<activeByDefault>true</activeByDefault>
@@ -30,6 +21,15 @@
 				<!-- using the tomcat 6.x container -->
 				<cargo.container>tomcat6x</cargo.container>
 				<cspace.server.home>${env.CATALINA_HOME}</cspace.server.home>
+				<config.destination>${cspace.server.home}/lib</config.destination>
+			</properties>
+		</profile>
+		<profile>
+			<id>nodeploy</id>
+			<properties>
+				<!-- using the tomcat 6.x container -->
+				<cargo.container>tomcat6x</cargo.container>
+				<cspace.server.home>${temp.war.location}</cspace.server.home>
 				<config.destination>${cspace.server.home}/lib</config.destination>
 			</properties>
 		</profile>
@@ -74,7 +74,7 @@
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.1.1</version>
 				<configuration>
-					<outputDirectory>${maven.tomcat.home}</outputDirectory>
+					<outputDirectory>${temp.war.location}</outputDirectory>
 					<archive>
 					</archive>
 				</configuration>
@@ -110,7 +110,7 @@
 						<deployables>
 							<deployable>
 								<!-- location of war file -->
-								<location> ${maven.tomcat.home}/${project.build.finalName}.${project.packaging} </location>
+								<location> ${temp.war.location}/${project.build.finalName}.${project.packaging} </location>
 							</deployable>
 						</deployables>
 					</deployer>
