CSPACE-6844: JEE_PORT is now a required environment variable.

--- a/csp-api/pom.xml
+++ b/csp-api/pom.xml
@@ -11,7 +11,7 @@
 		<artifactId>svcapp</artifactId>
 		<version>4.3-SNAPSHOT</version>
 	</parent>
-
+    
 	<dependencies>
 		<dependency>
 			<groupId>commons-logging</groupId>
@@ -36,6 +36,9 @@
 
 	<build>
 		<finalName>csp-api</finalName>
+		<filters>
+            <filter>../build.properties</filter>
+        </filters>
 		<plugins>
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
