--- a/cspi-installation/pom.xml
+++ b/cspi-installation/pom.xml
@@ -91,6 +91,9 @@
 
 	<build>
 		<finalName>cspi-installation</finalName>
+		<filters>
+            <filter>../build.properties</filter>
+        </filters>
 	</build>
 
 </project>
