--- a/tomcat-main/pom.xml
+++ b/tomcat-main/pom.xml
@@ -13,6 +13,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>commons-collections</groupId>
+  			<artifactId>commons-collections</artifactId>
+  			<version>3.2.2</version>
+		</dependency>
+		<dependency>
 			<groupId>org.collectionspace.services</groupId>
 			<artifactId>org.collectionspace.services.common-api</artifactId>
 			<version>${project.version}</version>
@@ -167,6 +172,9 @@
 
 	<build>
 		<finalName>tomcat-main</finalName>
+		<filters>
+            <filter>../build.properties</filter>
+        </filters>
 		<resources>
 			<resource>
 				<!-- Exclude config files, since these get deployed into tomcat's lib 
