--- a/war-entry/build.xml
+++ b/war-entry/build.xml
@@ -16,7 +16,6 @@
 
 	<target name="deploy_cspace_config"
         description="Copies application layer config files to their deployed locations">
-		
 		<!-- Copy nuxeo templates -->
 		<delete dir="${config_destination}/nx-plugin-templates"/>
 		<copy todir="${config_destination}/nx-plugin-templates">
@@ -28,26 +27,39 @@
 		</copy>
 		
 		<!-- 
-			Copy defaults and tenants folders and all of their contents
+			Copy defaults folders and all of their contents
 		-->
 		<delete dir="${config_destination}/defaults"/>
 		<copy todir="${config_destination}/defaults">
 			<fileset dir="${app_resources_dir}/defaults" includes="*/**"/>
+			<filterset>
+	        	<filter token="JEE_PORT" value="${env.JEE_PORT}" />
+			</filterset>			
 		</copy>
+		
+		<!-- 
+			Copy tenants folders and all of their contents
+		-->		
 		<delete dir="${config_destination}/tenants"/>
 		<copy todir="${config_destination}/tenants">
 			<fileset dir="${app_resources_dir}/tenants" includes="*/**"/>
+			<filterset>
+	        	<filter token="JEE_PORT" value="${env.JEE_PORT}" />
+			</filterset>			
 		</copy>
 		
 		<!-- Delete old and Copy new cspace-config files -->
 		<delete>
 			<fileset dir="${config_destination}" casesensitive="yes">
-			  <include name="cspace-config-*.xml"/>
+				<include name="cspace-config-*.xml"/>
 			</fileset>
 		</delete>
 		<copy todir="${config_destination}" overwrite="true">
 			<fileset dir="${app_resources_dir}"/>
 			<globmapper from="*-tenant.xml" to="cspace-config-*.xml"/>
+			<filterset>
+	        	<filter token="JEE_PORT" value="${env.JEE_PORT}" />
+			</filterset>
 		</copy>
 	</target>
 
