NOJIRA: Prevent app layer log messages from being duplicated in catalina.out.

--- a/tomcat-main/src/main/resources/log4j.properties
+++ b/tomcat-main/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=ERROR, stderr, R
+log4j.rootLogger=ERROR, R
 
 log4j.appender.stderr=org.apache.log4j.ConsoleAppender
 log4j.appender.stderr.target=System.err
