--- a/cspi-services/pom.xml
+++ b/cspi-services/pom.xml
@@ -21,6 +21,13 @@
 
 		<dependency>
 			<groupId>org.collectionspace</groupId>
+			<artifactId>general-utils</artifactId>
+			<version>${project.version}</version>
+			<type>jar</type>
+		</dependency>
+
+		<dependency>
+			<groupId>org.collectionspace</groupId>
 			<artifactId>csp-api</artifactId>
 			<version>${project.version}</version>
 			<type>jar</type>
