CSPACE-5262: Added code that will init/reload default authorities and term lists during application layer startup.

--- a/cspi-services/pom.xml
+++ b/cspi-services/pom.xml
@@ -46,6 +46,13 @@
 			<version>${project.version}</version>
 			<type>jar</type>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.collectionspace</groupId>
+			<artifactId>cspi-webui</artifactId>
+			<version>${project.version}</version>
+			<type>jar</type>
+		</dependency>		
 
 		<dependency>
 			<groupId>org.collectionspace</groupId>
