NOJIRA: Increase max services connections, change log level to WARN.

--- a/tomcat-main/src/main/resources/log4j.properties
+++ b/tomcat-main/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=ERROR, R
+log4j.rootLogger=WARN, R
 
 log4j.appender.stderr=org.apache.log4j.ConsoleAppender
 log4j.appender.stderr.target=System.err
@@ -34,6 +34,7 @@ log4j.logger.org.collectionspace.chain.installation=ERROR
 log4j.logger.org.collectionspace.chain.installation.Services=WARN
 log4j.logger.org.collectionspace.csp.helper.core.ConfigFinder=ERROR
 log4j.logger.org.collectionspace.chain.controller.AppConfigDeployFileFilter=ERROR
+log4j.logger.org.collectionspace.chain.csp.persistence.services.connection.ServicesConnection=WARN
 
 #
 # Enable the following entries for debugging only. Log levels below should be
