--- a/csp-impl/pom.xml
+++ b/csp-impl/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>org.collectionspace</groupId>
 		<artifactId>svcapp</artifactId>
-		<version>4.4-SNAPSHOT</version>
+		<version>4.4</version>
 	</parent>
 
 	<dependencies>
