--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.collectionspace</groupId>
-	<version>4.4-SNAPSHOT</version>
+	<version>4.4</version>
 	<artifactId>svcapp</artifactId>
 	<packaging>pom</packaging>
 	<name>Root</name>
