--- a/war-entry/pom.xml
+++ b/war-entry/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>org.collectionspace</groupId>
 		<artifactId>svcapp</artifactId>
-		<version>4.4-SNAPSHOT</version>
+		<version>4.4</version>
 	</parent>
 
 	<profiles>
