--- a/war-entry/pom.xml
+++ b/war-entry/pom.xml
@@ -136,7 +136,7 @@
 				<version>1.7</version>
 				<executions>
 					<execution>
-						<phase>post-clean</phase>
+						<phase>clean</phase>
 						<goals>
 							<goal>run</goal>
 						</goals>
