--- a/war-entry/pom.xml
+++ b/war-entry/pom.xml
@@ -59,8 +59,8 @@
 	<build>
 		<finalName>collectionspace</finalName>
 		<filters>
-            <filter>../build.properties</filter>
-        </filters>
+			<filter>../build.properties</filter>
+		</filters>
 		<!-- We need the logging info in the war's classes, so it gets picked up -->
 		<resources>
 			<resource>
@@ -142,7 +142,7 @@
 						</goals>
 						<configuration>
 							<target>
-								<delete dir="${cspace.server.home}/webapps/${project.build.finalName}"/>
+								<delete dir="${cspace.server.home}/webapps/${project.build.finalName}"></delete>
 							</target>
 						</configuration>
 					</execution>
