--- a/tomcat-main/src/main/resources/log4j.properties
+++ b/tomcat-main/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=ERROR, stdout, R
+log4j.rootLogger=INFO, stdout, R
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.target=System.out
@@ -35,7 +35,8 @@ log4j.logger.org.collectionspace.chain.installation=ERROR
 log4j.logger.org.collectionspace.chain.installation.Services=DEBUG
 log4j.logger.org.collectionspace.csp.helper.core.ConfigFinder=ERROR
 log4j.logger.org.collectionspace.chain.controller.AppConfigDeployFileFilter=ERROR
-log4j.logger.org.collectionspace.chain.installation.XsdGeneration=ERROR
+log4j.logger.org.collectionspace.chain.installation.XsdGeneration=INFO
+log4j.logger.org.collectionspace.chain.installation.ServiceBindingsGeneration=INFO
 
 #
 # Enable the following entries for debugging only. Log levels below should be
@@ -47,7 +48,7 @@ log4j.logger.org.collectionspace.chain.installation.XsdGeneration=ERROR
 #
 # Logging for the command line tool that generates the Service artifacts
 #
-log4j.logger.org.collectionspace.chain.controller.CommandLine=ERROR, commandline
+log4j.logger.org.collectionspace.chain.controller.CommandLine=INFO, commandline
 log4j.additivity.org.collectionspace.chain.controller.CommandLine=false
 
 log4j.logger.org.apache.commons.httpclient.auth=WARN
