--- a/cspi-webui/pom.xml
+++ b/cspi-webui/pom.xml
@@ -38,6 +38,12 @@
 			<artifactId>org.collectionspace.services.common-api</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.collectionspace.services</groupId>
+		    <artifactId>org.collectionspace.services.structureddate</artifactId>
+		    <version>${project.version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.collectionspace</groupId>
