CSPACE-6909: Cleaning up logging messages.  Fixed duplicate shortid values in botgarden vocabularies.

--- a/tomcat-main/src/main/resources/log4j.properties
+++ b/tomcat-main/src/main/resources/log4j.properties
@@ -31,6 +31,7 @@ log4j.appender.R.layout.ConversionPattern=%d %-5p [%t] [%c:%L] %m%n
 # debugging 'delta' files used in these merges and for troubleshooting:
 log4j.logger.org.collectionspace.chain.csp.config.impl.parser.AssemblingContentHandler=INFO
 log4j.logger.org.collectionspace.chain.csp.webui.misc=ERROR
+log4j.logger.org.collectionspace.chain.csp.webui.misc.WebReset=INFO
 log4j.logger.org.collectionspace.chain.installation=ERROR
 log4j.logger.org.collectionspace.chain.installation.Services=DEBUG
 log4j.logger.org.collectionspace.csp.helper.core.ConfigFinder=ERROR
