--- a/cspi-services/src/test/resources/log4j.properties
+++ b/cspi-services/src/test/resources/log4j.properties
@@ -6,8 +6,7 @@ log4j.appender.stderr.layout=org.apache.log4j.PatternLayout
 log4j.appender.stderr.layout.ConversionPattern=%d (%r) [%t] %p %c: %m%n
 
 log4j.appender.R=org.apache.log4j.RollingFileAppender
-# log4j.appender.R.File=${catalina.base}/logs/cspace-app.log
-log4j.appender.R.File=../logs/cspi-services-app.log
+log4j.appender.R.File=target/test-client.log
 log4j.appender.R.MaxFileSize=5000KB
 # Keep ten backup files
 log4j.appender.R.MaxBackupIndex=10
