--- a/cspi-installation/pom.xml
+++ b/cspi-installation/pom.xml
@@ -71,6 +71,21 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.xmlunit</groupId>
+			<artifactId>xmlunit-core</artifactId>
+			<version>2.3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.xmlunit</groupId>
+			<artifactId>xmlunit-matchers</artifactId>
+			<version>2.3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-all</artifactId>
+			<version>1.3</version>
+		</dependency>
+		<dependency>
 			<groupId>org.collectionspace</groupId>
 			<artifactId>cspi-schema</artifactId>
 			<version>${project.version}</version>
