--- a/tomcat-main/src/main/resources/log4j.properties
+++ b/tomcat-main/src/main/resources/log4j.properties
@@ -36,8 +36,11 @@ log4j.logger.org.collectionspace.chain.installation=ERROR
 log4j.logger.org.collectionspace.chain.installation.Services=DEBUG
 log4j.logger.org.collectionspace.csp.helper.core.ConfigFinder=ERROR
 log4j.logger.org.collectionspace.chain.controller.AppConfigDeployFileFilter=ERROR
-log4j.logger.org.collectionspace.chain.installation.XsdGeneration=INFO
+log4j.logger.org.collectionspace.chain.installation.ServiceConfigGeneration=INFO
+log4j.logger.org.collectionspace.chain.installation.MakeXsd=INFO
 log4j.logger.org.collectionspace.chain.installation.ServiceBindingsGeneration=INFO
+log4j.logger.org.collectionspace.chain.csp.config.impl.main.TreeNode=ERROR
+log4j.logger.org.collectionspace.csp.helper.core.ConfigFinder=INFO
 
 #
 # Enable the following entries for debugging only. Log levels below should be
