--- a/cspi-services/src/test/resources/log4j.properties
+++ b/cspi-services/src/test/resources/log4j.properties
@@ -14,3 +14,4 @@ log4j.appender.R.layout=org.apache.log4j.PatternLayout
 log4j.appender.R.layout.ConversionPattern=%d %-5p [%t] [%c:%L] %m%n
 
 log4j.logger.org.collectionspace.chain.util.json.JSONUtils=DEBUG
+log4j.logger.org.collectionspace.chain.csp.persistence.services.TestService=DEBUG
