--- a/csp-api/pom.xml
+++ b/csp-api/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>org.collectionspace</groupId>
 		<artifactId>svcapp</artifactId>
-		<version>4.5-SNAPSHOT</version>
+		<version>4.5</version>
 	</parent>
     
 	<dependencies>
