--- a/cspi-installation/pom.xml
+++ b/cspi-installation/pom.xml
@@ -10,7 +10,7 @@
 	<parent>
 		<groupId>org.collectionspace</groupId>
 		<artifactId>svcapp</artifactId>
-		<version>4.5-SNAPSHOT</version>
+		<version>4.5</version>
 	</parent>
 
 	<dependencies>
