DRYD-205: Renamed structured date in references and pom to reflect new name.

--- a/cspi-webui/pom.xml
+++ b/cspi-webui/pom.xml
@@ -41,7 +41,7 @@
 		
 		<dependency>
 		    <groupId>org.collectionspace.services</groupId>
-		    <artifactId>org.collectionspace.services.structureddate</artifactId>
+		    <artifactId>org.collectionspace.services.structureddate.structureddate</artifactId>
 		    <version>${project.version}</version>
 		</dependency>
 
