--- a/war-entry/pom.xml
+++ b/war-entry/pom.xml
@@ -72,7 +72,6 @@
 		</resources>
 
 		<plugins>
-		    <!--
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
@@ -123,8 +122,7 @@
 					</execution>
 				</executions>
 			</plugin>
-			-->
-			<!-- 
+			<!--
 				Delete the exploded war file directory from the JEE container when a
 				'clean' build is performed
 			-->
@@ -139,7 +137,7 @@
 						</goals>
 						<configuration>
 							<target>
-							    <delete file="${cspace.server.home}/webapps/${project.build.finalName}.${project.packaging}"></delete>
+								<!-- <delete file="${cspace.server.home}/webapps/${project.build.finalName}.${project.packaging}"></delete> -->
 								<delete dir="${cspace.server.home}/webapps/${project.build.finalName}"></delete>
 							</target>
 						</configuration>
