--- a/cspi-webui/pom.xml
+++ b/cspi-webui/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>org.collectionspace</groupId>
 		<artifactId>svcapp</artifactId>
-		<version>5.0-SNAPSHOT</version>
+		<version>5.0</version>
 	</parent>
 
 	<dependencies>
