CSPACE-7034: Avoid replacing text inside strings in new settings file when cloning a tenant.

--- a/build.xml
+++ b/build.xml
@@ -122,12 +122,9 @@
   </target>
 
   <target name="update-tenant-shortname-in-tenant-settings">
-   <!-- Note: this text replacement is brute-force and will even replace sub-strings,
-        if found, so you'll need to ensure that the template tenant's shortname is a
-        unique string: that it won't be inadvertently contained within text elsewhere. -->
     <replaceregexp
       file="${tenant.settings.file}"
-      match="${template.tenant.shortname}"
+      match="(?&lt;!\w)${template.tenant.shortname}(?!\w)"
       replace="${tenant.shortname}"
       flags="gi">
     </replaceregexp>
