NOJIRA: Update a comment.

--- a/tenant.properties
+++ b/tenant.properties
@@ -10,7 +10,7 @@
 # Where there are conflicts, values provided via the command line
 # are used in preference to those provided in this properties file.
 
-# The short name for the existing tenant that will be 
+# The short name for the existing tenant that will be
 # copied ("cloned"), to create a new tenant
 # example:  template.tenant.shortname=fcart
 template.tenant.shortname=
@@ -20,11 +20,10 @@ template.tenant.shortname=
 tenant.shortname=
 
 # The ID for the new tenant to be created
-# (currently an integer; e.g. 5, 23)
-# example: tenant.id=5
+# (an integer from 100 to 199)
+# example: tenant.id=105
 tenant.id=
 
 # The internet domain for the new tenant to be created
 # example: tenant.internet.domain=mymuseum.example.org
 tenant.internet.domain=
-
