--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,14 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.collectionspace</groupId>
-	<version>5.2</version>
+	<version>${revision}</version>
 	<artifactId>svcapp</artifactId>
 	<packaging>pom</packaging>
 	<name>Root</name>
 
 	<properties>
+		<revision>5.2-SNAPSHOT</revision>
+		<cspace.services.version>${revision}</cspace.services.version>
 		<temp.war.location>${basedir}/tmp</temp.war.location>
 		<cspace.tool.csmake>csmake</cspace.tool.csmake>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -286,6 +288,30 @@
 		</testResources>
 
 		<plugins>
+			<plugin>
+			    <groupId>org.codehaus.mojo</groupId>
+			    <artifactId>flatten-maven-plugin</artifactId>
+			    <version>1.1.0</version>
+			    <configuration>
+			        <updatePomFile>true</updatePomFile>
+			    </configuration>
+			    <executions>
+			        <execution>
+			            <id>flatten</id>
+			            <phase>process-resources</phase>
+			            <goals>
+			                <goal>flatten</goal>
+			            </goals>
+			        </execution>
+			        <execution>
+			            <id>flatten.clean</id>
+			            <phase>clean</phase>
+			            <goals>
+			                <goal>clean</goal>
+			            </goals>
+			        </execution>
+			    </executions>
+			</plugin>
 			<plugin>
 				<artifactId>maven-antrun-plugin</artifactId>
 				<version>1.8</version>
